--- a/app/src/main/res/layout/capture_fragment.xml
+++ b/app/src/main/res/layout/capture_fragment.xml
@@ -31,9 +31,8 @@
         android:id="@+id/input_layout">
 
         <ImageButton
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:id="@+id/capture_new_pic"
             android:background="#00ffffff"
             android:src="@drawable/ic_action_camera"
@@ -45,24 +44,21 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:id="@+id/description_text"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:minLines="2"
-            android:maxLines="3"
-            android:scrollbars="horizontal"
-            android:hint="Description- limited to 80 characters"
-            android:layout_weight="5"
-            android:layout_gravity="center_vertical"
+            android:padding="5dp"
+            android:minLines="1"
+            android:maxLines="2"
+            android:hint="Name: 40 character max"
+            android:layout_weight="1"
+            android:gravity="top"
             android:background="#ffffff"
-            android:maxLength="80" />
+            android:maxLength="40" />
 
         <ImageButton
-            android:layout_width="0dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:id="@+id/capture_share"
             android:background="#00ffffff"
-            android:src="@drawable/ic_action_share"
+            android:src="@drawable/ic_action_upload"
             android:layout_gravity="center_vertical" />
     </LinearLayout>
 
