--- a/app/src/main/res/layout/gallery_single_layout.xml
+++ b/app/src/main/res/layout/gallery_single_layout.xml
@@ -25,18 +25,15 @@
             android:inputType="textMultiLine"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="5"
+            android:layout_weight="1"
             android:id="@+id/gallery_single_image_description_text"
-            android:paddingLeft="5dp"
-            android:paddingRight="5dp"
-            android:minLines="2"
-            android:maxLines="3"
-            android:scrollbars="horizontal"
-            android:hint="Description- limited to 80 characters"
+            android:padding="5dp"
+            android:minLines="1"
+            android:maxLines="2"
+            android:hint="Name: 40 character max"
             android:gravity="top"
-            android:layout_gravity="center"
             android:background="#ffffff"
-            android:maxLength="80" />
+            android:maxLength="40" />
 
         <ImageButton
             android:layout_width="wrap_content"
@@ -45,6 +42,6 @@
             android:layout_gravity="center"
             android:layout_margin="4dp"
             android:background="#00000000"
-            android:src="@drawable/ic_action_share"/>
+            android:src="@drawable/ic_action_upload"/>
     </LinearLayout>
 </RelativeLayout>
