--- a/app/src/main/res/layout/csserver_fragment.xml
+++ b/app/src/main/res/layout/csserver_fragment.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <TableLayout
         android:layout_width="fill_parent"
@@ -19,7 +20,7 @@
                 android:id="@+id/textView5"
                 android:layout_marginLeft="25dp"
                 android:textSize="18sp"
-                android:textColor="#0078c9"/>
+                android:textColor="#0078c9" />
 
         </TableRow>
 
@@ -52,7 +53,7 @@
                 android:id="@+id/textView"
                 android:layout_marginLeft="25dp"
                 android:textSize="18sp"
-                android:textColor="#0078c9"/>
+                android:textColor="#0078c9" />
 
             <Spinner
                 android:layout_width="match_parent"
@@ -105,8 +106,34 @@
 
         <TableRow
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_marginTop="25dp">
+            android:layout_height="fill_parent">
+
+            <TextView
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:text="Time Created"
+                android:id="@+id/textView9"
+                android:layout_marginLeft="25dp"
+                android:textSize="18sp"
+                android:textColor="#0078c9"
+                android:layout_marginRight="100dp" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Timestamp Value"
+                android:id="@+id/textView10"
+                android:layout_marginLeft="25dp" />
+        </TableRow>
+
+        <TableRow
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent">
 
             <TextView
                 android:layout_width="fill_parent"
@@ -115,7 +142,7 @@
                 android:id="@+id/textView3"
                 android:layout_marginLeft="25dp"
                 android:textSize="18sp"
-                android:textColor="#0078c9"/>
+                android:textColor="#0078c9" />
 
         </TableRow>
 
@@ -135,8 +162,7 @@
 
         <TableRow
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:layout_marginTop="25dp">
+            android:layout_height="fill_parent">
 
             <TextView
                 android:layout_width="fill_parent"
@@ -146,7 +172,7 @@
                 android:singleLine="false"
                 android:layout_marginLeft="25dp"
                 android:textSize="18sp"
-                android:textColor="#0078c9"/>
+                android:textColor="#0078c9" />
 
         </TableRow>
 
